Add CustomBuiltInLiteral